ユーザー作成APIを定義した (#62)
* ユーザー作成APIを定義した

* make openapi
